Update GitHub link to point to Kiiria's profile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ scalable solutions for real-world electric mobility challenges.
 
 <p>
 <a href="assets/Salome_Mukuhi_Kiiria_CV.pdf">Download CV</a> |
-<a href="https://github.com/yourusername">GitHub</a> |
+<a href="https://github.com/Kiiria">GitHub</a> |
 <a href="https://www.linkedin.com/in/salome-kiiria-783376303">LinkedIn</a>
 </p>
 
